pro: vue-cli-self for pro env

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "factory-manage-fe",
+  "name": "vue-cli-self",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "o-tager.wang <o-tager.wang@dji.com>",
